feat: step 2
