# api/objects/get_locale200_response1.py
@@ -9,34 +9,34 @@ from api.objects.base_model_ import Model
 from api import util
 
 
-class GetLocale200Response(Model):
+class GetLocale200Response1(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, button_value=None, message_click_to_copy_es_es=None, message_click_to_copy_pt_br=None, message_click_to_copy_us_us=None, message_header=None, message_header_shared=None, message_subheader=None, message_subheader_shared=None, powered_by=None, powered_by_link=None):  # noqa: E501
-        """GetLocale200Response - a model defined in OpenAPI
+        """GetLocale200Response1 - a model defined in OpenAPI
 
-        :param button_value: The button_value of this GetLocale200Response.  # noqa: E501
+        :param button_value: The button_value of this GetLocale200Response1.  # noqa: E501
         :type button_value: str
-        :param message_click_to_copy_es_es: The message_click_to_copy_es_es of this GetLocale200Response.  # noqa: E501
+        :param message_click_to_copy_es_es: The message_click_to_copy_es_es of this GetLocale200Response1.  # noqa: E501
         :type message_click_to_copy_es_es: str
-        :param message_click_to_copy_pt_br: The message_click_to_copy_pt_br of this GetLocale200Response.  # noqa: E501
+        :param message_click_to_copy_pt_br: The message_click_to_copy_pt_br of this GetLocale200Response1.  # noqa: E501
         :type message_click_to_copy_pt_br: str
-        :param message_click_to_copy_us_us: The message_click_to_copy_us_us of this GetLocale200Response.  # noqa: E501
+        :param message_click_to_copy_us_us: The message_click_to_copy_us_us of this GetLocale200Response1.  # noqa: E501
         :type message_click_to_copy_us_us: str
-        :param message_header: The message_header of this GetLocale200Response.  # noqa: E501
+        :param message_header: The message_header of this GetLocale200Response1.  # noqa: E501
         :type message_header: str
-        :param message_header_shared: The message_header_shared of this GetLocale200Response.  # noqa: E501
+        :param message_header_shared: The message_header_shared of this GetLocale200Response1.  # noqa: E501
         :type message_header_shared: str
-        :param message_subheader: The message_subheader of this GetLocale200Response.  # noqa: E501
+        :param message_subheader: The message_subheader of this GetLocale200Response1.  # noqa: E501
         :type message_subheader: str
-        :param message_subheader_shared: The message_subheader_shared of this GetLocale200Response.  # noqa: E501
+        :param message_subheader_shared: The message_subheader_shared of this GetLocale200Response1.  # noqa: E501
         :type message_subheader_shared: str
-        :param powered_by: The powered_by of this GetLocale200Response.  # noqa: E501
+        :param powered_by: The powered_by of this GetLocale200Response1.  # noqa: E501
         :type powered_by: str
-        :param powered_by_link: The powered_by_link of this GetLocale200Response.  # noqa: E501
+        :param powered_by_link: The powered_by_link of this GetLocale200Response1.  # noqa: E501
         :type powered_by_link: str
         """
         self.openapi_types = {
@@ -77,32 +77,32 @@ class GetLocale200Response(Model):
         self._powered_by_link = powered_by_link
 
     @classmethod
-    def from_dict(cls, dikt) -> 'GetLocale200Response':
+    def from_dict(cls, dikt) -> 'GetLocale200Response1':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The get_locale_200_response of this GetLocale200Response.  # noqa: E501
-        :rtype: GetLocale200Response
+        :return: The get_locale_200_response_1 of this GetLocale200Response1.  # noqa: E501
+        :rtype: GetLocale200Response1
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def button_value(self):
-        """Gets the button_value of this GetLocale200Response.
+        """Gets the button_value of this GetLocale200Response1.
 
 
-        :return: The button_value of this GetLocale200Response.
+        :return: The button_value of this GetLocale200Response1.
         :rtype: str
         """
         return self._button_value
 
     @button_value.setter
     def button_value(self, button_value):
-        """Sets the button_value of this GetLocale200Response.
+        """Sets the button_value of this GetLocale200Response1.
 
 
-        :param button_value: The button_value of this GetLocale200Response.
+        :param button_value: The button_value of this GetLocale200Response1.
         :type button_value: str
         """
 
@@ -110,20 +110,20 @@ class GetLocale200Response(Model):
 
     @property
     def message_click_to_copy_es_es(self):
-        """Gets the message_click_to_copy_es_es of this GetLocale200Response.
+        """Gets the message_click_to_copy_es_es of this GetLocale200Response1.
 
 
-        :return: The message_click_to_copy_es_es of this GetLocale200Response.
+        :return: The message_click_to_copy_es_es of this GetLocale200Response1.
         :rtype: str
         """
         return self._message_click_to_copy_es_es
 
     @message_click_to_copy_es_es.setter
     def message_click_to_copy_es_es(self, message_click_to_copy_es_es):
-        """Sets the message_click_to_copy_es_es of this GetLocale200Response.
+        """Sets the message_click_to_copy_es_es of this GetLocale200Response1.
 
 
-        :param message_click_to_copy_es_es: The message_click_to_copy_es_es of this GetLocale200Response.
+        :param message_click_to_copy_es_es: The message_click_to_copy_es_es of this GetLocale200Response1.
         :type message_click_to_copy_es_es: str
         """
 
@@ -131,20 +131,20 @@ class GetLocale200Response(Model):
 
     @property
     def message_click_to_copy_pt_br(self):
-        """Gets the message_click_to_copy_pt_br of this GetLocale200Response.
+        """Gets the message_click_to_copy_pt_br of this GetLocale200Response1.
 
 
-        :return: The message_click_to_copy_pt_br of this GetLocale200Response.
+        :return: The message_click_to_copy_pt_br of this GetLocale200Response1.
         :rtype: str
         """
         return self._message_click_to_copy_pt_br
 
     @message_click_to_copy_pt_br.setter
     def message_click_to_copy_pt_br(self, message_click_to_copy_pt_br):
-        """Sets the message_click_to_copy_pt_br of this GetLocale200Response.
+        """Sets the message_click_to_copy_pt_br of this GetLocale200Response1.
 
 
-        :param message_click_to_copy_pt_br: The message_click_to_copy_pt_br of this GetLocale200Response.
+        :param message_click_to_copy_pt_br: The message_click_to_copy_pt_br of this GetLocale200Response1.
         :type message_click_to_copy_pt_br: str
         """
 
@@ -152,20 +152,20 @@ class GetLocale200Response(Model):
 
     @property
     def message_click_to_copy_us_us(self):
-        """Gets the message_click_to_copy_us_us of this GetLocale200Response.
+        """Gets the message_click_to_copy_us_us of this GetLocale200Response1.
 
 
-        :return: The message_click_to_copy_us_us of this GetLocale200Response.
+        :return: The message_click_to_copy_us_us of this GetLocale200Response1.
         :rtype: str
         """
         return self._message_click_to_copy_us_us
 
     @message_click_to_copy_us_us.setter
     def message_click_to_copy_us_us(self, message_click_to_copy_us_us):
-        """Sets the message_click_to_copy_us_us of this GetLocale200Response.
+        """Sets the message_click_to_copy_us_us of this GetLocale200Response1.
 
 
-        :param message_click_to_copy_us_us: The message_click_to_copy_us_us of this GetLocale200Response.
+        :param message_click_to_copy_us_us: The message_click_to_copy_us_us of this GetLocale200Response1.
         :type message_click_to_copy_us_us: str
         """
 
@@ -173,20 +173,20 @@ class GetLocale200Response(Model):
 
     @property
     def message_header(self):
-        """Gets the message_header of this GetLocale200Response.
+        """Gets the message_header of this GetLocale200Response1.
 
 
-        :return: The message_header of this GetLocale200Response.
+        :return: The message_header of this GetLocale200Response1.
         :rtype: str
         """
         return self._message_header
 
     @message_header.setter
     def message_header(self, message_header):
-        """Sets the message_header of this GetLocale200Response.
+        """Sets the message_header of this GetLocale200Response1.
 
 
-        :param message_header: The message_header of this GetLocale200Response.
+        :param message_header: The message_header of this GetLocale200Response1.
         :type message_header: str
         """
 
@@ -194,20 +194,20 @@ class GetLocale200Response(Model):
 
     @property
     def message_header_shared(self):
-        """Gets the message_header_shared of this GetLocale200Response.
+        """Gets the message_header_shared of this GetLocale200Response1.
 
 
-        :return: The message_header_shared of this GetLocale200Response.
+        :return: The message_header_shared of this GetLocale200Response1.
         :rtype: str
         """
         return self._message_header_shared
 
     @message_header_shared.setter
     def message_header_shared(self, message_header_shared):
-        """Sets the message_header_shared of this GetLocale200Response.
+        """Sets the message_header_shared of this GetLocale200Response1.
 
 
-        :param message_header_shared: The message_header_shared of this GetLocale200Response.
+        :param message_header_shared: The message_header_shared of this GetLocale200Response1.
         :type message_header_shared: str
         """
 
@@ -215,20 +215,20 @@ class GetLocale200Response(Model):
 
     @property
     def message_subheader(self):
-        """Gets the message_subheader of this GetLocale200Response.
+        """Gets the message_subheader of this GetLocale200Response1.
 
 
-        :return: The message_subheader of this GetLocale200Response.
+        :return: The message_subheader of this GetLocale200Response1.
         :rtype: str
         """
         return self._message_subheader
 
     @message_subheader.setter
     def message_subheader(self, message_subheader):
-        """Sets the message_subheader of this GetLocale200Response.
+        """Sets the message_subheader of this GetLocale200Response1.
 
 
-        :param message_subheader: The message_subheader of this GetLocale200Response.
+        :param message_subheader: The message_subheader of this GetLocale200Response1.
         :type message_subheader: str
         """
 
@@ -236,20 +236,20 @@ class GetLocale200Response(Model):
 
     @property
     def message_subheader_shared(self):
-        """Gets the message_subheader_shared of this GetLocale200Response.
+        """Gets the message_subheader_shared of this GetLocale200Response1.
 
 
-        :return: The message_subheader_shared of this GetLocale200Response.
+        :return: The message_subheader_shared of this GetLocale200Response1.
         :rtype: str
         """
         return self._message_subheader_shared
 
     @message_subheader_shared.setter
     def message_subheader_shared(self, message_subheader_shared):
-        """Sets the message_subheader_shared of this GetLocale200Response.
+        """Sets the message_subheader_shared of this GetLocale200Response1.
 
 
-        :param message_subheader_shared: The message_subheader_shared of this GetLocale200Response.
+        :param message_subheader_shared: The message_subheader_shared of this GetLocale200Response1.
         :type message_subheader_shared: str
         """
 
@@ -257,20 +257,20 @@ class GetLocale200Response(Model):
 
     @property
     def powered_by(self):
-        """Gets the powered_by of this GetLocale200Response.
+        """Gets the powered_by of this GetLocale200Response1.
 
 
-        :return: The powered_by of this GetLocale200Response.
+        :return: The powered_by of this GetLocale200Response1.
         :rtype: str
         """
         return self._powered_by
 
     @powered_by.setter
     def powered_by(self, powered_by):
-        """Sets the powered_by of this GetLocale200Response.
+        """Sets the powered_by of this GetLocale200Response1.
 
 
-        :param powered_by: The powered_by of this GetLocale200Response.
+        :param powered_by: The powered_by of this GetLocale200Response1.
         :type powered_by: str
         """
 
@@ -278,20 +278,20 @@ class GetLocale200Response(Model):
 
     @property
     def powered_by_link(self):
-        """Gets the powered_by_link of this GetLocale200Response.
+        """Gets the powered_by_link of this GetLocale200Response1.
 
 
-        :return: The powered_by_link of this GetLocale200Response.
+        :return: The powered_by_link of this GetLocale200Response1.
         :rtype: str
         """
         return self._powered_by_link
 
     @powered_by_link.setter
     def powered_by_link(self, powered_by_link):
-        """Sets the powered_by_link of this GetLocale200Response.
+        """Sets the powered_by_link of this GetLocale200Response1.
 
 
-        :param powered_by_link: The powered_by_link of this GetLocale200Response.
+        :param powered_by_link: The powered_by_link of this GetLocale200Response1.
         :type powered_by_link: str
         """
 
